force-app/main/default/objects/ICT_Meeting__c/ICT_Meeting__c.object-meta.xml
<CustomObject>
    <label>ICT Meeting</label>
    <nameField>
        <displayFormat>ICT-{000}</displayFormat>
        <label>ICT Meeting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ICT Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>