force-app/main/default/objects/ICT_Meeting__c/fields/Meeting_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Date_Time__c</fullName>
    <label>Meeting Date/Time</label>
    <type>DateTime</type>
</CustomField>