force-app/main/default/objects/ICT_Meeting__c/fields/Meeting_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Outcome__c</fullName>
    <label>Member Attendance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member Did Not Attend</fullName>
            </value>
            <value>
                <fullName>Member Attended</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>