force-app/main/default/objects/ICT_Meeting__c/fields/Member_Attended__c.field-meta.xml
<CustomField>
    <fullName>Member_Attended__c</fullName>
    <formula>Members_Attended__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Member Attended</label>
    <type>Checkbox</type>
</CustomField>