force-app/main/default/objects/ICT_Meeting__c/fields/Members_Attended__c.field-meta.xml
<CustomField>
    <fullName>Members_Attended__c</fullName>
    <label>Members Attended</label>
    <summaryFilterItems>
        <field>ICT_Meeting_Member__c.Role__c</field>
        <operation>equals</operation>
        <value>Patient</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>ICT_Meeting_Member__c.Attended__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>ICT_Meeting_Member__c.ICT_Meeting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>