force-app/main/default/objects/ICT_Meeting__c/fields/Next_ICT_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Next_ICT_Meeting__c</fullName>
    <description>Projected date of next ICT Meeting</description>
    <label>Next ICT Meeting -DEAD</label>
    <type>Date</type>
</CustomField>