force-app/main/default/objects/ICT_Meeting__c/fields/Next_ICT_Meetingdt__c.field-meta.xml
<CustomField>
    <fullName>Next_ICT_Meetingdt__c</fullName>
    <label>Next ICT Meeting Date/Time</label>
    <type>DateTime</type>
</CustomField>