force-app/main/default/objects/ICT_Meeting__c/fields/Outcome_of_ICT_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Outcome_of_ICT_Meeting__c</fullName>
    <inlineHelpText>Select all</inlineHelpText>
    <label>Outcome of ICT Meeting</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No changes in Plan of Care</fullName>
            </value>
            <value>
                <fullName>Referral to Social Worker</fullName>
            </value>
            <value>
                <fullName>Referral to Specialist</fullName>
            </value>
            <value>
                <fullName>Referral to Pharmacy team</fullName>
            </value>
            <value>
                <fullName>Referral to Community Health Advocates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>