force-app/main/default/objects/ICT_Meeting__c/fields/Timing_of_N__c.field-meta.xml
<CustomField>
    <fullName>Timing_of_N__c</fullName>
    <label>Timing of Next ICT Follow Up</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 month from meeting</fullName>
            </value>
            <value>
                <fullName>3 months from meeting</fullName>
            </value>
            <value>
                <fullName>6 months from meeting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>