force-app/main/default/objects/ICT_Meeting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Member__c</columns>
    <columns>NAME</columns>
    <columns>Case__c</columns>
    <columns>Meeting_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>